--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <form method = 'post' action = '/decks'>
-    Username: <input type = 'text' name= 'login[:user_name]'/>
-    Password: <input type = 'password' name= 'login[:password]'/>
-    <input type = 'submit' value = 'login'/>
+    Username: <input type = 'text' name= 'login[:user_name]'/></br></br>
+    Password: <input type = 'password' name= 'login[:password]'/></br></br>
+    <input type = 'submit' value = 'login'/></br></br>
   </form>
-  <a href= '/users/create'>Create User</a>
+  <a href= '/users/create'>Create User</a></br></br>
 </div>
