--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,4 +1,7 @@
 <div class="container">
   <ul>
     <% @decks.each do |deck| %>
-    <li><a href=""
+    <li><a href='<%="/round?deck_id=#{deck.id}"%>'><%= deck.name %></a></li>
+    <% end %>
+  </ul>
+</div>
