--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,9 +27,9 @@
         <li><a href="/">Home</a></li>
       </ul>
     </nav>
-    
+    <div class="row">
       <%= yield %>
-
+    </div>
     <footer class="footer row">
       <div class="col-xs-12 col-sm-6 col-md-8">
         <span class="copyright">Copyright &copy;2014. All Rights Reserved.</span>
@@ -42,7 +42,6 @@
   </div><!--.container-fluid-->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
