--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,10 @@
-  <form method = 'post' action = '/decks'>
-    Username: <input type = 'text' name= 'login[:user_name]'/>
-    Password: <input type = 'password' name= 'login[:password]'/>
-    <input type = 'submit' value = 'login'/>
+  <form method="post" action="/decks" class="login" role="form">
+    <fieldset class="input-fields">
+      <label for="username">Username: <input type="text" name="login[:user_name]" id="username" class="form-control"></label>
+      <label for="password">Password: <input type="password" name="login[:password]" id="password" class="form-control"></label>
+    </fieldset>
+    <fieldset class="submit-buttons">
+      <label for="submit"><input type="button" name="submit" id="submit" class="btn btn-primary" value="Login"/></label>
+      <a href="/users/create" class="btn btn-primary">Create Account</a>
+    </fieldset>
   </form>
-  <a href= '/users/create'>Create User</a>
