--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,15 +19,20 @@
   </head>
   <body>
     <div class="container-fluid">
-    <header class="row">
+    <header class="row page-header">
       <h1><a href="/">FlashChards</a></h1>
     </header>
     <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
+      <ul class="nav nav-tabs">
+        <li class="first"><a href="/">Home</a></li>
+        <li><a href="/decks">Decks <span class="glyphicon glyphicon-briefcase"></span></a></li>
+        <li><a href="/">Login</a></li>
+        <li><a href="/">About</a></li>
+        <li class="last"><a href="/">Contact</a></li>
       </ul>
     </nav>
     <div class="row">
+      <header class="page-header"></header>
       <%= yield %>
     </div>
     <footer class="footer row">
