--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -23,12 +23,11 @@
       <h1><a href="/">FlashChards</a></h1>
     </header>
     <nav>
-      <ul class="nav nav-tabs">
-        <li class="first"><a href="/">Home</a></li>
-        <li><a href="/decks">Decks <span class="glyphicon glyphicon-briefcase"></span></a></li>
-        <li><a href="/">Login</a></li>
-        <li><a href="/">About</a></li>
-        <li class="last"><a href="/">Contact</a></li>
+      <ul class="nav">
+        <li class="first"><a href="/"><span class="glyphicon glyphicon-home"></span></a></li>
+        <li><a href="/">Login<span class="glyphicon glyphicon-user"></span></a></li>
+        <li class="last"><a href="/">Study<span class="glyphicon glyphicon-pencil"></span></a></li>
+        </li>
       </ul>
     </nav>
     <div class="row">
