--- a/app/views/question.erb
+++ b/app/views/question.erb
@@ -2,7 +2,7 @@
   <h2><%= @user.name %></h2>
   <h2><%= @deck.name %></h2>
   <p><%= @card.question %></p>
-  <form action="/round/answer/" method="post">
+  <form action="/round/answer" method="post">
   Your guess: <input type="text" name="guess">
   <input type="submit" value="Submit Guess">
 </form>
