--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,5 +1,5 @@
   <ul>
-    <% @decks.each do |deck| %>
-    <li><a href='<%="/round?deck_id=#{deck.id}"%>'><%= deck.name %></a></li>
+    <% Deck.all.each do |deck| %>
+    <li><a href='<%="/round?deck_id=#{deck.id}"%>'><%= deck.name %></a><span clas="glyphicon glyphicon-th-large"></span></li>
     <% end %>
   </ul>
