--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -1,20 +1,1 @@
-<a href="/users/logout">Logout</a>
-<h1><%=@profile_data[0][:name]%></h1>
-<table>
-  <th>
-    <td>Round</td>
-    <td>Deck</td>
-    <td>Total Guesses</td>
-    <td>Correct Guesses</td>
-    <td>Percent Correct</td>
-  </th>
-  <%@profile_data.each do |round|%>
-  <tr>
-    <td><%=round[:round]%></td>
-     <td><%=round[:deck]%></td>
-     <td><%=round[:total_guesses]%></td>
-     <td><%=round[:correct_guesses]%></td>
-     <td><%=round[:percentage_correct]%></td>
-  </tr>
-  <%end%>
-</table>
+  <div class="row"><div class="alert alert-warning text-center col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3"><h2>Under Construction</h2></div></div>
