--- a/app/views/decks.erb
+++ b/app/views/decks.erb
@@ -1,5 +1,11 @@
-  <ul>
-    <% Deck.all.each do |deck| %>
-    <li><a href='<%="/round?deck_id=#{deck.id}"%>'><%= deck.name %></a><span clas="glyphicon glyphicon-th-large"></span></li>
-    <% end %>
-  </ul>
+  <h2 class="page-header"><span class="glyphicon glyphicon-folder-open"></span>&nbsp;&nbsp;&nbsp;Decks</h2>
+
+  <div class="row">
+      <div class="col-sm-8 col-md-6">
+        <ul class="list-group">
+          <% Deck.all.each do |deck| %>
+            <li class="list-group-item"><span class="glyphicon glyphicon-folder-open"></span>&nbsp;&nbsp;&nbsp;<a href='<%="/round?deck_id=#{deck.id}"%>'><%= deck.name %></a></li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
