--- a/app/views/question.erb
+++ b/app/views/question.erb
@@ -1,10 +1,14 @@
-<div class="container">
-  <h2><%= @user.name %></h2>
-  <h2><%= @deck.name %></h2>
-  <p><%= @card.question %></p>
-  <form action="/round/answer" method="post">
-  Your guess: <input type="text" name="guess">
-  <input type="submit" value="Submit Guess">
+
+<h2 class="page-header"><span class="glyphicon glyphicon-folder-open"></span>&nbsp;&nbsp;&nbsp;<%= @deck.name %></h2>
+
+<p class="well muted-heading"><%= @card.question %></p>
+
+<form action="/round/answer" method="post" role="form" class="form form-horizontal inline question">
+  <div class="form-group pull-left">
+    <div class="input-group input-group-lg"><label class="label sr-only" for="guess"></label><input type="text" id="guess" name="guess" placeholder="Answer" class="form-control" ></div>
+  </div>
+  <input type="submit" name="submit" id="submit" class="btn btn-warning btn-lg" value="Submit"/></div>
+
 </form>
 
-</div>
+
